Get rid of unsafe access warnings on JDK 24